# tesseract

./: .env.example  PLAN.md  README.md  pyproject.toml
docs/: 70bb8547.md  KYA_Layer0_Design.md  index.html  kya-lld.html  treasury_intelligence_design_doc.html  treasury_intelligence_lld.html
scenarios/buy_item/: README.md  run.sh
src/agent/: shopping_agent.py  tools.py
src/ap2/: credentials.py  mandate_verifier.py  mandates.py  verifier.py
src/merchant/: catalog.py  models.py  negotiation.py  profile.py  server.py  storage.py  ucp_manifest.py
tests/: test_ap2_mandates.py  test_e2e_ucp_ap2.py  test_negotiation.py  test_ucp_merchant.py
