[project]
name = "tesseract"
version = "0.2.0"
description = "UCP + AP2 spec-compliant agentic commerce PoC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "google-adk>=0.5.0",
    "google-genai>=0.8.0",
    "cryptography>=42.0.0",
    # AP2 types — install from official repo:
    # uv pip install git+https://github.com/google-agentic-commerce/AP2.git@main
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
