[project]
name = "tesseract"
version = "0.2.0"
description = "UCP + AP2 agentic commerce PoC — built on official AP2 Python samples"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # HTTP client (agent <-> merchant calls)
    "httpx>=0.27.0",

    # Data modelling
    "pydantic>=2.7.0",

    # Env management
    "python-dotenv>=1.0.0",

    # Google ADK (agent orchestration)
    "google-adk>=0.5.0",
    "google-genai>=0.8.0",

    # ── AP2 official SDK ─────────────────────────────────────────────────────
    # Installs ap2.types, ap2.crypto, ap2.ucp — the real protocol primitives.
    # Source: https://github.com/google-agentic-commerce/AP2/tree/main/code/sdk
    "ap2 @ git+https://github.com/google-agentic-commerce/AP2.git@main#subdirectory=code/sdk",

    # Crypto (used by AP2 SDK for ECDSA P-256 mandate signing)
    "cryptography>=42.0.0",

    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
