[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tesseract"
version = "0.3.0"
description = "UCP + AP2 PoC merchant server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "httpx>=0.27",          # FastAPI TestClient
    "cryptography>=42",
    "jwcrypto>=1.5",
    # AP2 SDK — install when running with real keys:
    # "ap2-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
